--- a/01.BootcampPreparation/02.ViableAndDataType/ThucHanh02.html
+++ b/01.BootcampPreparation/02.ViableAndDataType/ThucHanh02.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HiMan</title>
+    <title>Tính diện tích</title>
 </head> 
 <body>
         <script>
