--- a/01.BootcampPreparation/02.ViableAndDataType/ThucHanh03.html
+++ b/01.BootcampPreparation/02.ViableAndDataType/ThucHanh03.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HiMan</title>
+    <title>Thử phép số dư</title>
 </head> 
 <body>
         <script>
