--- a/01.BootcampPreparation/02.VaribleAndDataType/BT_ChuyenDoiTienTe.html
+++ b/01.BootcampPreparation/02.VaribleAndDataType/BT_ChuyenDoiTienTe.html
@@ -6,17 +6,17 @@
 </head>
 
 <body>
-        Amount<br>
-        <input type="number" id="amount" /><br>
-        <br>From Currency<br>
-        <select type="text" id="from">
-            <option value="VND">VietNam</option>
-        </select><br>
-        <br>To Currency<br>
-        <select type="text" id="to">
-            <option value="USD">USD</option>
-        </select><br><br>
-        <input type="button" onclick="convert()" value="Convert" />
+    Amount<br>
+    <input type="number" id="amount" /><br>
+    <br>From Currency<br>
+    <select type="text" id="from">
+        <option value="VND">VietNam</option>
+    </select><br>
+    <br>To Currency<br>
+    <select type="text" id="to">
+        <option value="USD">USD</option>
+    </select><br><br>
+    <input type="button" onclick="convert()" value="Convert" />
     </form>
     <p id="showResult"></p>
     <script>
@@ -30,11 +30,10 @@
             to = document.getElementById("to").value;
             if (from === "VND" && to === "USD") {
                 convert = amount / 23000 + "USD"
-            };
+            }
             document.getElementById("showResult").innerHTML = "Result is " + convert;
-        }</script>
+        }
+        </script>
 </body>
 
 </html>
-
-
