--- a/01.BootcampPreparation/05.Mang/ThucHanh/Dao_Nguoc_Cac_Phan_Tu.html
+++ b/01.BootcampPreparation/05.Mang/ThucHanh/Dao_Nguoc_Cac_Phan_Tu.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <script>
-    var x = [1,2,3,4,5,6];
-    x.reverse ();
+<script>
+    var x = [1, 2, 3, 4, 5, 6];
+    x.reverse();
     document.write(x);
-    </script>
+</script>
+
 </html>
