--- a/01.BootcampPreparation/03.CauTrucDieuKien/BaiTap/BT_GoodFastCheap.html
+++ b/01.BootcampPreparation/03.CauTrucDieuKien/BaiTap/BT_GoodFastCheap.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-    <label><input type="checkbox" id="good" onclick="good()" value="good">Good</label><br>
-    <label><input type="checkbox" id="cheap" onclick="cheap()" value="cheap">Cheap</label><br>
-    <label><input type="checkbox" id="fast" onclick="fast()" value="fast">Fast</label><br>
+    <label><input type="checkbox" id="good" onclick="good()" >Good</label><br>
+    <label><input type="checkbox" id="cheap" onclick="cheap()" >Cheap</label><br>
+    <label><input type="checkbox" id="fast" onclick="fast()" >Fast</label><br>
     <script>
         function good() {
             var isGood = document.getElementById("good").checked;
